--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,7 @@
 body {
     font-size: 15px;
-    font-family: sans-serif
+    font-family: sans-serif;
+    color-scheme:dark
 }
 *{
   margin: 0px;
@@ -26,6 +27,7 @@ body {
   justify-content: center;
 }
 .header_logo p{
+  font-family: serif;
   color:#EEF2F3;
   font-weight: bold ;
   font-size: 25px;
@@ -44,7 +46,7 @@ body {
 }
 .header_link a{
   text-decoration: none;
-  color: #EDFCFF;
+  color: #D6D6D6;
   font-size: 14px;
   font-weight: bold ;
   width: 100%;
@@ -183,6 +185,35 @@ body {
 .grag-b-text{
   display: flex;
   align-items: center
+}
+.footer{
+  width: 100%;
+  height: 100%;
+  background-color: #424242;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-link{
+  display: flex;
+}
+.footer-link-active{
+  color: #E7E7E7
+}
+.footer-link {
+  color:#9C9C9C
+}
+.footer-link p{
+  margin: 5px
+}
+.footer-contact img{
+  width: 50px
+}
+.footer-info{
+  color:#828282;
+  display: flex;
+  flex-direction: column;
+  align-items: center 
 }
 
 
